# SimplyNodeFramework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  shell.html
examples/ems_save/client/: CMakeLists.txt  main.cpp
examples/snmp_read_write/: CMakeLists.txt  main.cpp
examples/snmp_trap_concurrent/: CMakeLists.txt  main.cpp
examples/widgets/: CMakeLists.txt  echo_client_example.cpp  layouts_example.cpp  scroll_area_example.cpp  splitter_example.cpp  stacked_widget_example.cpp  table_model_example.cpp  tabs_example.cpp  vbox_stretch_scroll_example.cpp
imgui-web-demo/: CMakeLists.txt  CMakePresets.json  main.cpp  manual_imgui_emsdk.md  shell.html
lib/Core/: CMakeLists.txt
lib/Core/src/SNFCore/: AbstractTableModel.cpp  AbstractTableModel.h  Application.cpp  Application.h  AsyncTask.cpp  AsyncTask.h  ByteArray.h  CommandLineOption.cpp  CommandLineOption.h  CommandLineParser.cpp  CommandLineParser.h  Connection.cpp  Connection.h  ConsoleLogSink.cpp  ConsoleLogSink.h  EnqueuedAsyncTask.cpp  EnqueuedAsyncTask.h  EpollPoller.cpp  EpollPoller.h  EpollPollerStub.cpp  EventLoop.cpp  EventLoop.h  File.cpp  File.h  IniParser.cpp  IniParser.h  LogLevel.h  LogMessage.h  LogSink.h  Logger.cpp  Logger.h  Logging.h  ModelIndex.cpp  ModelIndex.h  Node.cpp  Node.h  NodeLifetimeBlock.h  NodePtr.cpp  NodePtr.h  NodeRegistry.cpp  (+20 more)
lib/Core/test/: AbstractTableModelTests.cpp  ByteArrayTests.cpp  CMakeLists.txt  CommandLineParserTests.cpp  ConnectionTests.cpp  CoreTests.cpp  FileTests.cpp  IniParserTests.cpp  LoggingTests.cpp  ProcessTests.cpp  RunnableTests.cpp  SpanTests.cpp  TempFileTests.cpp  ThreadPoolTests.cpp  ThreadStorageTests.cpp  TimeLapseTests.cpp  TimerTests.cpp  VariantTests.cpp
lib/Database/: CMakeLists.txt
lib/Database/src/SNFDatabase/: MySqlDatabase.cpp  MySqlDatabase.h  MySqlDatabaseManager.h  SqlDatabase.cpp  SqlDatabase.h  SqlDatabaseProvider.h  SqlQuery.cpp  SqlQuery.h  SqlTableModel.cpp  SqlTableModel.h  SqliteDatabase.cpp  SqliteDatabase.h
lib/Database/test/: CMakeLists.txt  MySqlDatabaseTests.cpp  SqlTableModelTests.cpp  SqliteDatabaseTests.cpp  docker-compose.test.yml  mysql-schema.sql
lib/HttpServer/: CMakeLists.txt
lib/HttpServer/src/: CMakeLists.txt
lib/HttpServer/src/SNFHttpServer/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpRequestParser.cpp  HttpRequestParser.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
lib/HttpServer/test/: CMakeLists.txt  HttpRequestParserTests.cpp  HttpServerTests.cpp
lib/Json/: CMakeLists.txt
lib/Json/src/SNFJson/: JsonArray.cpp  JsonArray.h  JsonDocument.cpp  JsonDocument.h  JsonObject.cpp  JsonObject.h  JsonParseError.cpp  JsonParseError.h  JsonStorage.h  JsonValue.cpp  JsonValue.h
lib/Json/test/: CMakeLists.txt  JsonArrayTests.cpp  JsonDocumentTests.cpp  JsonObjectTests.cpp  JsonValueTests.cpp
lib/Network/: CMakeLists.txt
lib/Network/src/: CMakeLists.txt
lib/Network/src/SNFNetwork/: ByteArray.h  HostAddress.cpp  HostAddress.h  IOEvent.cpp  IOEvent.h  LocalServer.cpp  LocalServer.h  LocalSocket.cpp  LocalSocket.h  NetworkDatagram.cpp  NetworkDatagram.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
lib/Network/test/: CMakeLists.txt  HostAddressTests.cpp  LocalServerTests.cpp  LocalSocketTests.cpp  TcpServerTests.cpp  TcpSocketTests.cpp  UdpSocketTests.cpp
lib/Profiler/: CMakeLists.txt
lib/Profiler/ProfilerTool/: index.html  package-lock.json  package.json
lib/Profiler/ProfilerTool/src/: App.tsx  spanUtils.ts
lib/Profiler/include/Profiler/: Macros.h  MemoryTracker.h  ProfilerNode.h  ProfilerServer.h  SysMonitor.h  TraceBuffer.h  TraceEvent.h  integration.h
lib/Profiler/src/: MemoryTracker.cpp  ProfilerNode.cpp  ProfilerServer.cpp  SysMonitor.cpp  TraceBuffer.cpp
lib/Profiler/test/: CMakeLists.txt  EventLoopProfilingTests.cpp  MacrosTests.cpp  MemoryTrackerTests.cpp  ProfilerNodeTests.cpp  ProfilerServerTests.cpp  SysMonitorTests.cpp  TraceBufferTests.cpp  asan_options.cpp
lib/Snmp/: CMakeLists.txt
lib/Snmp/src/: CMakeLists.txt
lib/Snmp/src/SNFSnmp/: SnmpOid.cpp  SnmpOid.h  SnmpTrapInfo.h  SnmpTrapReceiver.cpp  SnmpTrapReceiver.h  SnmpTypes.h  SnmpV3Config.h  SnmpV3Credentials.h  SnmpV3Session.cpp  SnmpV3Session.h  SnmpValue.cpp  SnmpValue.h  SnmpVarBind.h
lib/Snmp/test/: CMakeLists.txt  SnmpOidTests.cpp  SnmpTrapReceiverTests.cpp  SnmpV3SessionTests.cpp  SnmpValueTests.cpp
lib/WebSocket/: CMakeLists.txt
lib/WebSocket/src/SNFWebSocket/: WebSocket.cpp  WebSocket.h  WebSocketBackend.h  WebSocketFrame.cpp  WebSocketFrame.h  WebSocketHandshake.cpp  WebSocketHandshake.h  WebSocketImplEmscripten.cpp  WebSocketImplNative.cpp  WebSocketServer.cpp  WebSocketServer.h
lib/WebSocket/test/: CMakeLists.txt  WebSocketFrameTests.cpp  WebSocketHandshakeTests.cpp  WebSocketServerTests.cpp  WebSocketTests.cpp
lib/Widgets/: CMakeLists.txt
lib/Widgets/examples/: CMakeLists.txt
lib/Widgets/examples/standalone/: CMakeLists.txt  main.cpp
lib/Widgets/examples/web_imgui_demo/: CMakeLists.txt  main.cpp
lib/Widgets/examples/web_minimal/: CMakeLists.txt  main.cpp
lib/Widgets/src/SNFWidgets/: ApplicationNode.cpp  ApplicationNode.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  DataWidgetMapper.cpp  DataWidgetMapper.h  FileOpenButton.cpp  Label.cpp  (+40 more)
lib/Widgets/test/: CMakeLists.txt  CheckBoxTests.cpp  ComboBoxTests.cpp  DataWidgetMapperTests.cpp  ImGuiInteractionHarness.h  LabelTests.cpp  LayoutTests.cpp  LineEditTests.cpp  MessageBoxTests.cpp  ProgressBarTests.cpp  PushButtonTests.cpp  RadioButtonTests.cpp  ScrollAreaTests.cpp  SliderTests.cpp  SpinBoxTests.cpp  SplitterTests.cpp  TableViewTests.cpp  TabsTests.cpp  TextEditTests.cpp  WidgetTests.cpp  WindowTests.cpp
lib/experimental/: CMakeLists.txt
lib/experimental/test/: AsyncTaskSequenceTests.cpp  CMakeLists.txt
standalone/: CMakeLists.txt
standalone/app/http/: CMakeLists.txt  http-main.cpp  main.cpp
standalone/app/webclient/: CMakeLists.txt  main.cpp  webclient-main.cpp
standalone/web/: index.html  index.js
(+39 files in other folders)
